--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,22 +28,22 @@ jobs:
               color: glyf_colr_1,
             }
           - {
-              file: "Twemoji_CffColr0.ttf",
+              file: "Twemoji_CffColr0.otf",
               family: "Twemoji - CffColr0",
               color: cff_colr_0,
             }
           - {
-              file: "Twemoji_CffColr1.ttf",
+              file: "Twemoji_CffColr1.otf",
               family: "Twemoji - CffColr1",
               color: cff_colr_1,
             }
           - {
-              file: "Twemoji_Cff2Colr0.ttf",
+              file: "Twemoji_Cff2Colr0.otf",
               family: "Twemoji - Cff2Colr0",
               color: cff2_colr_0,
             }
           - {
-              file: "Twemoji_Cff2Colr1.ttf",
+              file: "Twemoji_Cff2Colr1.otf",
               family: "Twemoji - Cff2Colr1",
               color: cff2_colr_1,
             }
@@ -100,7 +100,8 @@ jobs:
 
       - name: Hash Files
         run: |
-          echo "### Hashes" >> body.txt
+          echo "<details><summary>Hashes</summary>" >> body.txt
+          echo "" >> body.txt
           echo "| File | Hash |" >> body.txt
           echo "|---|---|" >> body.txt
           for file in $(find artifacts); 
@@ -109,10 +110,24 @@ jobs:
               echo "| $(basename -- "$file") | $(sha256sum "$file" | cut -d " " -f 1) |" >> body.txt;
             fi;
           done
+          echo "</details>" >> body.txt
         shell: bash
+
+      - name: Regular release
+        uses: ncipollo/release-action@v1
+        if: contains(github.ref, 'refs/tags/v')
+        with:
+          artifacts: "artifacts/**/*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: false
+          allowUpdates: true
+          draft: true
+          bodyFile: body.txt
+          prerelease: false
 
       - name: Nightly release
         uses: ncipollo/release-action@v1
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
         with:
           artifacts: "artifacts/**/*"
           token: ${{ secrets.GITHUB_TOKEN }}
