feat: generate fluent emoji

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "twemoji"]
 	path = twemoji
 	url = https://github.com/jdecked/twemoji
+[submodule "fluentui-emoji"]
+	path = fluentui-emoji
+	url = https://github.com/microsoft/fluentui-emoji
