--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "twemoji"]
 	path = twemoji
-	url = https://github.com/jdecked/twemoji
+	url = https://github.com/nerixyz/twemoji
 [submodule "fluentui-emoji"]
 	path = fluentui-emoji
 	url = https://github.com/microsoft/fluentui-emoji
